调整数据库配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 ## master 数据源配置
-master.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new??currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
+master.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
 master.datasource.username=postgres
 master.datasource.password=pp-admin
 master.datasource.driverClassName=org.postgresql.Driver
+master.datasource.initialSize=10
+master.datasource.maxActive=100
+master.datasource.minIdle=10
+
+
 
 ## cluster 数据源配置
-cluster.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new??currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
+cluster.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
 cluster.datasource.username=postgres
 cluster.datasource.password=pp-admin
 cluster.datasource.driverClassName=org.postgresql.Driver
+cluster.datasource.initialSize=10
+cluster.datasource.maxActive=100
+cluster.datasource.minIdle=10
