--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.config=classpath:log4j2-dev.xml
+
 ## master 数据源配置
 master.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
 master.datasource.username=postgres
@@ -8,8 +10,6 @@ master.datasource.maxActive=100
 master.datasource.minIdle=10
 
 
-
-
 ## cluster 数据源配置
 cluster.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
 cluster.datasource.username=postgres
@@ -18,3 +18,48 @@ cluster.datasource.driverClassName=org.postgresql.Driver
 cluster.datasource.initialSize=10
 cluster.datasource.maxActive=100
 cluster.datasource.minIdle=10
+
+
+
+kafka.consumer.zookeeper.connect=127.0.0.1:2181
+kafka.consumer.servers=127.0.0.1:9092
+kafka.consumer.enable.auto.commit=true
+kafka.consumer.session.timeout=6000
+kafka.consumer.auto.commit.interval=100
+kafka.consumer.auto.offset.reset=latest
+kafka.consumer.topic=tepst
+kafka.consumer.group.id=test
+kafka.consumer.concurrency=10
+
+kafka.producer.servers=127.0.0.1:9092
+kafka.producer.retries=0
+kafka.producer.batch.size=4096
+kafka.producer.linger=1
+kafka.producer.buffer.memory=40960
+
+spring.redis.host=localhost
+spring.redis.port=6379
+
+
+
+#============== kafka ===================
+# 指定kafka 代理地址，可以多个
+spring.kafka.bootstrap-servers=127.0.0.1:9092
+
+#=============== 生产者配置=======================
+
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+#===============消费者配置=======================
+# 指定默认消费者group id
+spring.kafka.consumer.group-id=test-consumer-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=100
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
