游标手动控制事务

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,21 +21,21 @@ cluster.datasource.minIdle=10
 
 
 
-kafka.consumer.zookeeper.connect=127.0.0.1:2181
-kafka.consumer.servers=127.0.0.1:9092
-kafka.consumer.enable.auto.commit=true
-kafka.consumer.session.timeout=6000
-kafka.consumer.auto.commit.interval=100
-kafka.consumer.auto.offset.reset=latest
-kafka.consumer.topic=tepst
-kafka.consumer.group.id=test
-kafka.consumer.concurrency=10
-
-kafka.producer.servers=127.0.0.1:9092
-kafka.producer.retries=0
-kafka.producer.batch.size=4096
-kafka.producer.linger=1
-kafka.producer.buffer.memory=40960
+#kafka.consumer.zookeeper.connect=127.0.0.1:2181
+#kafka.consumer.servers=127.0.0.1:9092
+#kafka.consumer.enable.auto.commit=true
+#kafka.consumer.session.timeout=6000
+#kafka.consumer.auto.commit.interval=100
+#kafka.consumer.auto.offset.reset=latest
+#kafka.consumer.topic=tepst
+#kafka.consumer.group.id=test
+#kafka.consumer.concurrency=10
+#
+#kafka.producer.servers=127.0.0.1:9092
+#kafka.producer.retries=0
+#kafka.producer.batch.size=4096
+#kafka.producer.linger=1
+#kafka.producer.buffer.memory=40960
 
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -44,22 +44,16 @@ spring.redis.port=6379
 
 #============== kafka ===================
 # 指定kafka 代理地址，可以多个
-spring.kafka.bootstrap-servers=127.0.0.1:9092
+kafka.consumer.servers=10.110.2.11:9092,10.110.2.11:9093,10.110.2.11:9094
+kafka.consumer.enable.auto.commit=true
+kafka.consumer.session.timeout=6000
+kafka.consumer.auto.commit.interval=100
+kafka.consumer.auto.offset.reset=latest
+kafka.consumer.group.id=simpleGroup
+kafka.consumer.concurrency=10
 
-#=============== 生产者配置=======================
-
-spring.kafka.producer.retries=0
-spring.kafka.producer.batch-size=16384
-spring.kafka.producer.buffer-memory=33554432
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
-#===============消费者配置=======================
-# 指定默认消费者group id
-spring.kafka.consumer.group-id=test-consumer-group
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.enable-auto-commit=true
-spring.kafka.consumer.auto-commit-interval=100
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
+kafka.producer.servers=10.110.2.11:9092,10.110.2.11:9093,10.110.2.11:9094
+kafka.producer.retries=0
+kafka.producer.batch.size=4096
+kafka.producer.linger=1
+kafka.producer.buffer.memory=40960
