--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,40 +20,26 @@ cluster.datasource.maxActive=100
 cluster.datasource.minIdle=10
 
 
-
-#kafka.consumer.zookeeper.connect=127.0.0.1:2181
-#kafka.consumer.servers=127.0.0.1:9092
-#kafka.consumer.enable.auto.commit=true
-#kafka.consumer.session.timeout=6000
-#kafka.consumer.auto.commit.interval=100
-#kafka.consumer.auto.offset.reset=latest
-#kafka.consumer.topic=tepst
-#kafka.consumer.group.id=test
-#kafka.consumer.concurrency=10
-#
-#kafka.producer.servers=127.0.0.1:9092
-#kafka.producer.retries=0
-#kafka.producer.batch.size=4096
-#kafka.producer.linger=1
-#kafka.producer.buffer.memory=40960
-
-spring.redis.host=localhost
-spring.redis.port=6379
-
-
-
 #============== kafka ===================
 # 指定kafka 代理地址，可以多个
-kafka.consumer.servers=10.110.2.11:9092,10.110.2.11:9093,10.110.2.11:9094
-kafka.consumer.enable.auto.commit=true
-kafka.consumer.session.timeout=6000
-kafka.consumer.auto.commit.interval=100
-kafka.consumer.auto.offset.reset=latest
-kafka.consumer.group.id=simpleGroup
-kafka.consumer.concurrency=10
+spring.kafka.bootstrap-servers=10.110.2.11:9092,10.110.2.11:9093,10.110.2.11:9094
+spring.kafka.producer.retries=0
+# 每次批量发送消息的数量
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+# 指定消息key和消息体的编解码方式
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-kafka.producer.servers=10.110.2.11:9092,10.110.2.11:9093,10.110.2.11:9094
-kafka.producer.retries=0
-kafka.producer.batch.size=4096
-kafka.producer.linger=1
-kafka.producer.buffer.memory=40960
+
+spring.kafka.consumer.group-id=consumer-tutorial
+spring.kafka.consumer.auto-commit-interval=100
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=true
+# 指定消息key和消息体的编解码方式
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# 指定listener 容器中的线程数，用于提高并发量
+spring.kafka.listener.concurrency=3
+
+
