--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,4 +42,13 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 # 指定listener 容器中的线程数，用于提高并发量
 spring.kafka.listener.concurrency=3
 
+#============== redis ===================
+spring.redis.host=10.100.0.21
+spring.redis.port=6381
+# 最大活跃链接数 默认8
+spring.redis.lettuce.pool.max-active=100
+# 最大空闲连接数 默认8
+spring.redis.lettuce.pool.max-idle=8
+# 最小空闲连接数 默认0
+spring.redis.lettuce.pool.min-idle=0
 
