--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ master.datasource.minIdle=10
 
 
 ## cluster 数据源配置
-cluster.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
+cluster.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new"
 cluster.datasource.username=postgres
 cluster.datasource.password=pp-admin
 cluster.datasource.driverClassName=org.postgresql.Driver
