--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.config=classpath:log4j2-dev.xml
 
 ## master 数据源配置
-master.datasource.url=jdbc:postgresql://10.110.4.12:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
+master.datasource.url=jdbc:postgresql://db.hexudong.top:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
 master.datasource.username=postgres
 master.datasource.password=pp-admin
 master.datasource.driverClassName=org.postgresql.Driver
@@ -11,7 +11,7 @@ master.datasource.minIdle=10
 
 
 ## cluster 数据源配置
-cluster.datasource.url=jdbc:postgresql://db.hexudong.top:5432/aig_push_new"
+cluster.datasource.url=jdbc:postgresql://db.hexudong.top:5432/aig_push_new?currentSchema=public&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8"
 cluster.datasource.username=postgres
 cluster.datasource.password=pp-admin
 cluster.datasource.driverClassName=org.postgresql.Driver
